<resources>
    <string name="app_name">Movie App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details_movie_title_label">title</string>
    <string name="details_movie_release_date_label">release date</string>
    <string name="details_movie_vote_label">vote</string>
    <string name="details_movie_vote__count">vote count</string>
    <string name="details_movie_details_label">Details</string>
</resources>