<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_margin="32dp">

            <ImageView
                android:id="@+id/details_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitXY"
                android:background="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/details_movie_releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:text="@string/details_movie_release_date_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_movie_title" />

            <TextView
                android:id="@+id/details_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000 "
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/details_movie_title_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/details_movie_vote" />

            <TextView
                android:id="@+id/details_movie_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="	#CCCC00	"
                android:textStyle="bold"
                android:text="@string/details_movie_vote_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_movie_poster" />

            <TextView
                android:id="@+id/tv_vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:textColor="#000000 "
                android:textStyle="bold"
                android:text="@string/details_movie_vote__count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/details_movie_vote"
                app:layout_constraintTop_toBottomOf="@+id/details_movie_vote" />

            <TextView
                android:id="@+id/details_movie_details_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/details_movie_details_label"
                android:textColor="#000000 "
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_vote_count" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>